Removed background from nodes when editing

--- a/src/scss/forms.scss
+++ b/src/scss/forms.scss
@@ -18,3 +18,19 @@ form#file-saver {
         margin-bottom: $spacing;
     }
 }
+
+/** Quill */
+
+#resume {
+    .ql-container {
+        font-family: inherit;
+    }
+
+    .ql-editor {
+        padding: initial;
+
+        li {
+            list-style-type: none;
+        }
+    }
+}
