--- a/src/scss/resume-hover.scss
+++ b/src/scss/resume-hover.scss
@@ -23,6 +23,10 @@
     font-style: italic;
 }
 
+.resume-editing {
+    background: unset;
+}
+
 $grab-handle-size: 35px;
 
 .row-grab-handle-container, .column-grab-handle-container {
