Added somewhat working new grab handles

--- a/src/scss/resume-hover.scss
+++ b/src/scss/resume-hover.scss
@@ -42,6 +42,7 @@ $grab-handle-size: 35px;
     font-family: $font-family-base;
     color: $light-shade;
     cursor: pointer;
+    flex-direction: column;
 }
 
 .row-grab-handle-container {
@@ -56,15 +57,13 @@ $grab-handle-size: 35px;
     }
 }
 
-.column-grab-handle-container {
-    .column-grab-handle {
-        top: -$grab-handle-size;
-        left: -1px;
-        width: calc(100% - 1rem + 3px);
-        height: $grab-handle-size;
-        background: $dark-accent;
-        padding-left: $spacing;
-    }
+.column-grab-handle {
+    // top: -$grab-handle-size;
+    width: 100%;
+    height: $grab-handle-size;
+    background: $dark-accent;
+    justify-content: center;
+    text-align: center;
 }
 
 /** Disable background if are hovering over a node's children */
