Redoing CSS editor styling

--- a/src/scss/css-editor.scss
+++ b/src/scss/css-editor.scss
@@ -5,8 +5,9 @@ section.css-category * {
 }
 
 section.css-category {
+    font-size: 11pt;
+
     h2, h3, h4, h5, h6 {
-        font-family: sans-serif;
         margin: 0.3em 0;
     }
 
@@ -16,9 +17,37 @@ section.css-category {
     }
 
     // font-family: monospace;
-    margin-bottom: 1em;
+    margin: $spacing 0;
+}
+
+/** Nested Categories */
+section.css-category-1 .css-category {
+    border: 1px solid $main;
+
+    h2 {
+        background: $main;
+        margin: 0;
+        padding: $spacing/2 $spacing;
+        color: $light-accent;
+        font-size: 1.2em;
+    }
+
+    div.css-category-content {
+        background: $light-shade;
+        padding: $spacing/2 $spacing;
+    }
 }
 
 #resume .resume-highlighted {
     background: darken($light-shade, 0.25);
+}
+
+.css-ruleset {
+    table {
+        margin-left: $spacing;
+
+        th::after {
+            content: ':'
+        }
+    }
 }
