--- a/src/scss/inputs.scss
+++ b/src/scss/inputs.scss
@@ -4,7 +4,7 @@
     input {
         background: inherit;
         border: 0;
-        border-bottom: 1px solid $light-shade;
+        border-bottom: 1px solid $light-accent;
     }
 
     input:hover {
