Improved node tree styling

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import "landing";
 @import "resume-hover";
+@import "node-tree";
 @import "forms";
 @import "css-editor";
 @import "quill";
