Added highlighting for active node

--- a/src/scss/node-tree.scss
+++ b/src/scss/node-tree.scss
@@ -11,6 +11,10 @@
         cursor: pointer;
         padding: $spacing/8 0;
     }
+
+    li.tree-item-selected > span {
+        background: $light-accent;
+    }
 }
 
 %icon {
