Removed hovering effects since it was annoying and laggy

--- a/src/scss/resume-hover.scss
+++ b/src/scss/resume-hover.scss
@@ -15,7 +15,7 @@ img.icon.resume-hovering, img.icon.resume-selected {
 
 #resume {
     div.resume-selected, .resume-selected {
-        border: 2px solid $main;
+        border: 2px solid $dark-shade;
         cursor: auto;
     }
 }
