--- a/src/scss/zindex.scss
+++ b/src/scss/zindex.scss
@@ -30,7 +30,7 @@ div.ReactModalPortal, div.ReactModalPortal * {
     z-index: $header-z + 2;
 }
 
-div.Pane1, div.Pane1 * {
+Vertical.div.Pane1, Vertical.div.Pane1 * {
     z-index: 1;
 
     .resume-hl-box {
