--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -24,7 +24,7 @@
 /* App Stuff */
 body {
     background: $light-shade;
-    font-family: Open Sans, sans-serif;
+    font-family: $sans-serif;
     color: $dark-shade;
     margin: 0;
 }
