--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,4 +1,5 @@
-$font-family-base: sans-serif;
+$sans-serif: Open Sans, sans-serif;
+$monospace: 'Source Code Pro', monospace;
 
 $light-spacing: 2px;
 $spacing: 1rem;
