--- a/src/scss/resume-hover.scss
+++ b/src/scss/resume-hover.scss
@@ -1,16 +1,7 @@
 @import "variables";
 
-.resume-hovering, .resume-selected {
+.resume-selected {
     background: $light-shade;
-}
-
-.resume-hovering {
-    // border: 1px dashed $main;
-    cursor: pointer;
-}
-
-img.icon.resume-hovering, img.icon.resume-selected {
-    border: 1px dashed $main;
 }
 
 #resume {
@@ -20,26 +11,6 @@ img.icon.resume-hovering, img.icon.resume-selected {
     }
 }
 
-.resume-hidden {
-    font-style: italic;
-    color: #aaaaaa;
-}
-
-.resume-default {
-    font-style: italic;
-}
-
 .resume-editing {
     background: unset;
-}
-
-#resume {
-    a.dropdown-item, button {
-        /** Use Bootstrap style for editing controls */
-        font-family: $font-family-base;
-    }
-
-    li.list-options {
-        list-style-type: none;
-    }
 }
