--- a/src/scss/zindex.scss
+++ b/src/scss/zindex.scss
@@ -11,12 +11,13 @@ header#app-header, header#app-header * {
     z-index: $header-z;
 
     /** Dropdown menus */
-    #top-menu, #top-menu * {
+    #top-menu, #top-menu *,
+    button.toolbar-button, button.toolbar-button {
         z-index: $header-z + 1;
     }
 
-    /** Don't want dropdowns getting obscured by labels */
-    span.label {
+    /** Don't want label obscuring dropdown menus */
+    span.toolbar-label {
         z-index: $header-z - 1;
     }
 }
